Update RatingController and related files: Remove unused Product import, enhance rating functionality